tests/paczka1/fuzzy1/81838466.err
Error in line 3: Ah0Q9WJ A627 74,8
Error in line 7: T42e5hKjsi A652 59,3
Error in line 4: ju0 A652 17,3
Error in line 11: ju0 A557 12,2
Error in line 26: Ah0Q9WJ A557 11,8
Error in line 30: Ah0Q9WJ A627 39,3
Error in line 35: T42e5hKjsi S899 37,4
